--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "tinyrv"
-version = "0.1.0"
+version = "0.1.1-dev0"
 authors = [
   { name="Stefan Holst", email="mail@s-holst.de" },
 ]
